2005-08-04  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (procinfo_new), (refresh_list):

	get_info -> procinfo_new.

2005-07-28  Abduxukur Abdurixit <abdurixit@gmail.com>

        * configure.in: Added "ug" to ALL_LINGUAS.

2005-07-25  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in:
	* src/callbacks.c: (cb_update_disks), (cb_timeout):
	* src/load-graph.c: (load_graph_update):

	Removed some debug messages.

	Released 2.11.90.

2005-07-22  Benoît Dejean  <TazForEver@dlfp.org>

	* src/defaulttable.h:
	* src/prettytable.c: (new_application), (pretty_table_new),
	(get_icon_from_theme), (get_icon_from_default),
	(get_icon_from_wnck), (pretty_table_get_icon),
	(create_scaled_icon):
	* src/procman.h:
	
	Updated defaulttable.
	Better icon lookup with GtkIconTheme.

2005-07-22  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_update_disks):
	
	Removed unused static var.

2005-07-19  Benoît Dejean  <TazForEver@dlfp.org>

	* src/bacon-message-connection.c: (server_cb):
	
	Sync with CVS HEAD.

2005-07-19  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_update_disks):

	Removed useless lock.

2005-07-19  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: (sort_bytes):
	* src/memmaps.c: (sort_guint64):
	* src/proctable.c: (sort_ints), (proctable_new):
	* src/util.h:

	Fixed column default sort order.
	Closes #310804.

2005-07-16  Benoît Dejean  <TazForEver@dlfp.org>

	* src/prettytable.c: (pretty_table_new):
	* src/procman.c: (procman_data_new):
	* src/proctable.c: (refresh_list), (proctable_free_table):

	s/g_hash_table_new (g_direct_hash, g_direct_equal)
	 /g_hash_table_new (NULL, NULL)/g.

2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: post release version bump.
	
	* src/proctable.c: (proctable_update_list): Fixed division by 0 that
	may happen on fast CPU which raises SIGFPE on x86.

2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.11.5.
