@@ -3,7 +3,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.52)
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gnome-system-monitor, 2.11.90)
+AM_INIT_AUTOMAKE(gnome-system-monitor, 2.11.91)
 AM_CONFIG_HEADER(config.h)
 
 AM_PROG_LIBTOOL
