@@ -1,5 +1,15 @@
 2005-08-04  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* configure.in:
+
+	Post release version bump.
+
+	* src/util.h:
+
+	Fixed include guards.
+
+2005-08-04  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/proctable.c: (procinfo_new), (refresh_list):
 
 	get_info -> procinfo_new.
